Thu Mar 31 16:49:56 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_get_ev_const): search root cref properly.
	  [ruby-dev:43365]

Thu Mar 31 14:50:25 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_s_constants): should ignore crefs with
	  the NODE_FL_CREF_PUSHED_BY_EVAL flag.

Wed Mar 30 22:55:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-toggle-block): toggle do/end and {}.

	* misc/ruby-mode.el (ruby-move-to-block): move to opening of
	  block.

Wed Mar 30 14:35:15 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.h (COPY_CREF): should copy
	  the NODE_FL_CREF_PUSHED_BY_EVAL flag to hide constants from
	  methods defined by class_eval.  [ruby-dev:43365]

Wed Mar 30 00:24:53 2011  Tanaka Akira  <akr@fsij.org>

	* ext/stringio/stringio.c: parenthesize macro arguments.

Tue Mar 29 21:51:31 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* object.c (rb_String): Kernel#String should call to_str before to_s.

Tue Mar 29 10:28:08 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_filehandler.rb
	  (WEBrick::TestFileHandler#test_short_filename): the cgi doesn't exist
	  on current directory.

Tue Mar 29 05:19:57 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: parenthesize macro arguments.

Tue Mar 29 00:03:51 2011 Tajima Akil <artonx@yahoo.co.jp>	

	* test/webrick/test_filehandler.rb (test_short_filename):
	 read real short filename by cmd because smb mounted files
	 have different naming convention.

Mon Mar 28 11:38:08 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (date_s_today): use int for year.

	* ext/date/date_core.c (datetime_s_now): ditto.

Mon Mar 28 11:07:41 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/extmk.rb: set MFLAGS from MAKEFLAGS when using nmake.

Mon Mar 28 11:07:00 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (love): all you need is love.

Sun Mar 27 23:16:31 2011  Tanaka Akira  <akr@fsij.org>
